Se documento y corrigio errores en CharacterData